<resources>
    <string name="app_name">XCriticalApp</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="wrong_email">Неверный e-mail</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="add_password">Введите пароль</string>
    <string name="add_email">Введите e-mail</string>
    <string name="required_field">Обязательное поле</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="add_first_name">Ваше имя</string>
    <string name="add_second_name">Ваша фамилия</string>
    <string name="phone">Телефон</string>
    <string name="terms_of_use">Я принимаю пользовательское соглашение</string>\
    <string name="incorrect_email">Некорректный e-mail</string>
    <string name="incorrect_phone">Некорректный номер телефона</string>
    <string name="thanks"><b>Благодарим за регистрацию!</b></string>
    <string name="thanks_description">
        Логин и пароль отправлены вам на e-mail.
        Вы можете задать PIN-код для упрощенной
        авторизации.
    </string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="add_pin">Задать PIN</string>
    <string name="error_email">Некорректный e-mail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_deals">СДЕЛКИ</string>
    <string name="account">АККАУНТ</string>
    <string name="instruments">ИНСТРУМЕНТЫ</string>
    <string name="signals">СИГНАЛЫ</string>
    <string name="more">ЕЩЕ</string>
    <string name="delimiter">/</string>
    <string name="company">BATUSD</string>
    <string name="hidden_company">CocaCola</string>
    <string name="first_number">73,2391</string>
    <string name="second_number">73,5678</string>
    <string name="percent">0,31%</string>
    <string name="presentation_first">$9 481,73</string>
    <string name="presentation_second">Доступно: $9 481,73</string>
    <string name="presentation_third">P$L: $266,03</string>
    <string name="replenish_the_deposit">Пополнить депозит</string>
    <string name="search">Поиск</string>
    <string name="unknown_error">
        Обнаружена
        непредвиденная ошибка
    </string>
    <string name="ok">Ok</string>

</resources>