<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.xcriticalapp.viewModel.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_main_color"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context=".activity.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:id="@+id/main_linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_guideline">

            <LinearLayout
                android:id="@+id/email_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={viewModel.email}"
                    android:hint="@string/add_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/app_white"
                    android:textColorHint="@color/app_light_purple"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/wrong_email_textView"
                    android:visibility="@{viewModel.isValidEmail ? View.GONE : View.VISIBLE  }"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_email"
                    android:textColor="@color/app_light_red"
                     />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={viewModel.password}"
                    android:hint="@string/add_password"
                    android:inputType="textPassword"
                    android:textColor="@color/app_white"
                    android:textColorHint="@color/app_light_purple"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/wrong_password_TextView"
                    android:visibility="@{viewModel.isValidPassword() ? View.GONE : View.VISIBLE  }"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_password"
                    android:textColor="@color/app_light_red"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/forgot_password"
                android:textColor="#687BDD"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/buttons_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_in_button"
                    android:onClick="@{()-> viewModel.login(email.getText().toString(),password.getText().toString())}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button_style"
                    android:text="@string/sign_in"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_style"
                    android:text="@string/register"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/xcritical_main_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/main_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_frame" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>